# ConsoleChat

./: README.md
src/: setup.cfg
src/ConsoleChat/: client.py  server.py
src/ConsoleChat/console_chat.egg-info/: PKG-INFO  SOURCES.txt
