[metadata]
name = console-chat
version = 0.0.1
author = Ekaterina Moroz
author_email = ekaterina-moroz99@rambler.ru
description = A simple console chat
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EkaterinaMoroz/ConsoleChat
project_urls =
    Bug Tracker = https://github.com/EkaterinaMoroz/ConsoleChat/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = ConsoleChat
packages = find:
python_requires = >=3.9

[options.packages.find]
where = ConsoleChat